# yao-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  book.toml
.github/workflows/: ci.yml  docs.yml
benches/: apply.rs  density.rs  gates.rs
benchmarks/julia/: Project.toml  generate_ground_truth.jl
bitbasis/: Cargo.toml
bitbasis/src/: bitstr.rs  iterate_control.rs  lib.rs
docs/: book.toml
docs/plans/: 2026-01-24-yao-rs-design.md  (+11 more)
docs/src/: cli.md  (+9 more)
examples/: circuit_pdf.rs  midterm_demo.rs  profile_bench.rs  qft.rs
scripts/: gen_module_graph.py  generate_test_data.jl  qflex_txt_to_yao_json.py  test_qflex_txt_to_yao_json.py
src/: ad.rs  apply.rs  bitutils.rs  circuit.rs  contractor.rs  density_matrix.rs  easybuild.rs  einsum.rs  gate.rs  index.rs  instruct.rs  instruct_qubit.rs  json.rs  lib.rs  measure.rs  noise.rs  operator.rs  qasm.rs  register.rs  state.rs  svg.rs  tensors.rs  torch_contractor.rs  typst.rs
tests/: apply.rs  bitutils.rs  circuit.rs  easybuild.rs  einsum.rs  einsum_dm.rs  gate.rs  index.rs  instruct.rs  instruct_qubit.rs  integration.rs  json.rs  measure.rs  noise.rs  operator.rs  state.rs  tensors.rs  test_apply.rs  test_boundary.rs  test_circuit.rs  test_easybuild.rs  test_einsum.rs  test_gates.rs  test_integration.rs  test_json.rs  test_new_gates.rs  test_omeco.rs  test_operator.rs  test_tensors.rs  torch_contractor.rs
visualization/: circuit.typ  example-basic.json  example-qft.json  example.typ
yao-cli/: Cargo.toml
yao-rs-py/: Cargo.toml
yao-rs-py/src/: circuit.rs  gate.rs  lib.rs  operator.rs  tensor_network.rs
(+79 files in other folders)
