[package]
name = "yao-rs"
version = "0.1.0"
edition = "2024"

[features]
torch = ["tch"]

[dependencies]
num-complex = "0.4"
ndarray = "0.16"
omeco = "0.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tch = { version = "0.17", optional = true }

[dev-dependencies]
approx = "0.5"
