[package]
name = "yao-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
parallel = ["rayon"]

[dependencies]
num-complex = "0.4"
ndarray = "0.16"
omeco = "0.1"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "apply"
harness = false
