[package]
name = "yao-rs-py"
version.workspace = true
edition.workspace = true

[lib]
name = "_yao_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = "0.16"
num-complex = "0.4"

serde_json = "1"

# Local dependency
yao-rs = { path = ".." }
